# pixaki-converter

./: .gitignore  Cargo.toml  README.md  fix.py  fix_clean.py  fix_final.py  fix_paste.py  test_fix.py
.github/workflows/: ci.yml
crates/aseprite-converter/: Cargo.toml
crates/aseprite-converter/src/: lib.rs  reader.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration_test.rs
crates/cli/tests/data/layers/: layers.aseprite
crates/pixaki-v2-converter/src/: lib.rs
crates/pixaki-v2/src/: lib.rs
crates/pixaki-v3-converter/src/: lib.rs
crates/pixaki-v3/src/: lib.rs
crates/pixel-art/: Cargo.toml
crates/pixel-art/src/: lib.rs
crates/pixel-studio-pro-v2/: Cargo.toml
crates/pixel-studio-pro-v2-converter/: Cargo.toml
crates/pixel-studio-pro-v2-converter/src/: lib.rs
crates/pixel-studio-pro-v2/src/: lib.rs
crates/psd-converter/: Cargo.toml
crates/psd-converter/src/: lib.rs
docs/specs/pixel-studio-pro/v2/: README.md  history.md  tools.md
scripts/: convert_all.py
src/: lib.rs  main.rs  pixaki.rs
src/aseprite/: mod.rs
tests/data/: animation.psp.json  frame.psp.json
tests/data/fox_smile.pixaki/: document.json  metadata.json
tests/data/fox_walk_2010s/: DocumentInfo.plist
